LISTA DE VERIFICACION AUDITORIA DE SERVICIO - VIU..html

--- a/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - VIU..html
+++ b/LISTA DE VERIFICACION AUDITORIA DE SERVICIO - VIU..html
@@ -1153,7 +1153,7 @@ async function generateFullReport(reportFecha, reportMes, auditorLider, oportuni
       ['Auditor Líder:',auditorLider+'\n'+(AUDITORES_CARGOS[auditorLider]||''),'Auditor Asignado:',auditorAsignado+'\n'+(AUDITORES_CARGOS[auditorAsignado]||'')],
       ['Objetivo:','Verificar el cumplimiento de los diferentes procesos que tienen relación directa con la atención prestada al usuario en las áreas de admisión, prestación del servicio, seguridad del paciente, ambiente humanizado, PQRS y protocolo de imagen.',
         'Proceso(s) a auditar:',{content:'Atención Asistencial – Consulta Externa, Información y Atención al usuario – Calidad\n\nSede auditada: '+sede, styles:{fontStyle:'bold'}}],
-      ['Documentos\nAplicables:','Lista de Verificación de Auditoría de Servicio (F-FSYM-797)','','']
+      ['Documentos\nAplicables:','Lista de Verificación de Auditoría de Servicio (F-SYM-798)','','']
     ], theme:'grid', styles:{fontSize:8,textColor:CT,cellPadding:3.5,lineWidth:0.2,lineColor:[210,218,230]},
     columnStyles:{0:{fontStyle:'bold',fillColor:[240,244,255],textColor:CN,cellWidth:38},1:{cellWidth:'auto'},2:{fontStyle:'bold',fillColor:[240,244,255],textColor:CN,cellWidth:38},3:{cellWidth:'auto'}},
     margin:{left:M,right:M}});
@@ -2043,3 +2043,4 @@ document.addEventListener('DOMContentLoaded',()=>{
 </script>
 </body>
 </html>
+
